Refactor: migrate all handlers to Reactor Mono/Flux, remove deprecated components
- Delete WebhookInterceptor, HandlerConfiguration, IdebDTO, Logging entity/repo,
  CustomerHistory entity/repo/service/handlers (InfoCif, UploadValidationCustomer),
  GenerateMetadataSlikForUncompletedDocument, RemoveMetadataSlik
- Fix S3ClientConfiguration: add try-catch to getFile() and listObjectFoundByName()
- Fix DatabaseUpdateListener: replace collectList().block() with reactive subscription
- Fix StatusCommandHandler: remove CustomerHistoryService, use Mono.zip for parallel queries
- Rewrite SendNotificationSlikUpdated: on count change, list PDFs, group by prefix,
  find matching user by userCode, send notification with file details
- Change CallbackProcessor and CommandProcessor interfaces to return Mono<Void>
- Update AbstractCommandHandler, CallbackHandler, CommandHandler for Mono
- Fix AuthorizationAspect: return Mono.empty() instead of null on auth failure
- Convert all callback handlers (13) from CompletableFuture.runAsync to Mono<Void>
- Convert all command handlers (26) from CompletableFuture.runAsync to Mono<Void>

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>